--- a/index.html
+++ b/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="style.css"
+    </head>
     <body>
         <h1>Authorship</h1>
+        <h3>Tagor</h3>
         <p>
             You say that father write a lot of books, but what he writes I don't
-            understand.
+            understand.<br>
             He was reading to you all evening, but could you really
-            make out what he meant?
+            make out what he meant?<br>
             What nice stores, mother, you can tell us! Why can't father
-            write like that, I wonder?
+            write like that, I wonder?<br>
             Did he never hear from his own mother stories of giants and
-            fairies and princesses?
-            Has he forgotten them all?
+            fairies and princesses?<br>
+            Has he forgotten them all?<br>
             Often when he gets late for his bath you have to call him
-            a hundred times.
+            a hundred times.<br>
             You wait and keep his dishes warm for him, but he goes on
-            writing and forgets.
-            Father always plays at making books.
+            writing and forgets.<br>
+            Father always plays at making books.<br>
             If ever I go to play in father's room, you come and call me,
-            "What a naughty child!"
+            "What a naughty child!"<br>
             If I make the slightest noise you say, "Don't you see that
-            father's at his work?"
-            What's the fun of always writing and writing?
+            father's at his work?"<br>
+            What's the fun of always writing and writing?<br>
             When I take up father's pen or pencil and write upon his book
             just as he does,-a,b,c,d,e,f,g,h,i,-why do you get cross with me
-            then, mother?
-            You never say a word when father writes.
+            then, mother?<br>
+            You never say a word when father writes.<br>
             When my father wastes such heaps of paper, mother, you don't
-            seem to mind at all.
+            seem to mind at all.<br>
             But if I take only one sheet to make a boat with, you say,
-            "Child, how troublesome you are!"
+            "Child, how troublesome you are!"<br>
             What do you think of father's spoiling sheets and sheets of
-            paper with black marks all over both sides?
+            paper with black marks all over both sides?<br>
         </p>
     </body>
 </html>
